--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* 基本設定 */
 body {
     margin: 0;
     font-family: "Arial", sans-serif;
@@ -26,19 +25,19 @@ body {
   .hero {
     font-family: 'Zen Maru Gothic', sans-serif;
     text-align: center;
-    margin-top: 100px;
-    color: #8dc6ff ;
+    margin-top: 10px;
+    color: #6ab3fc ;
   }
 
   .headline {
-    font-size: 2.5rem;
+    font-size: 2rem;
     opacity: 0;
     transform: translateY(50px);
     animation: fadeUp 1s forwards;
   }
 
   .subtext {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     opacity: 0;
     transform: translateY(50px);
     animation: fadeUp 1s forwards 0.5s;
@@ -51,6 +50,37 @@ body {
     }
   }
 
+  .qr-image {
+    width: 300px;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+    border-radius: 30px;  /* 角の丸み。 */
+  }
+
+  .Art-image {
+    display: flex;
+    justify-content: center;  /* 中央寄せ */
+    gap: 10px;
+    flex-wrap: wrap;  /* 画面が狭くなったら折り返す */
+    padding: 20px;
+  }
+  
+  .Art-image img {
+    max-width: 100%;     /* 親の幅に応じて縮む */
+    width: 300px;        /* 基本サイズ */
+    height: auto;        /* 比率を維持 */
+    border-radius: 15px;
+    object-fit: cover;   /* トリミングして整える（必要に応じて） */
+  }
+
+  @media (max-width: 600px) {
+    img {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
+
   .characters {
     font-family: 'Zen Maru Gothic', sans-serif;
     text-align: center;
@@ -58,34 +88,50 @@ body {
     margin-top: 50px;
   }
 
-  .slider-container {
-    position: relative;
+  
+  .swiper {
     width: 100%;
-    overflow: hidden;
+    padding: 40px 0;
   }
-
-  .slider {
+  
+  .swiper-wrapper {
     display: flex;
-    transition: transform 0.5s ease;
+    align-items: center;
   }
-
-  .slide {
-    flex: 0 0 200px;
-    margin: 0 10px;
-    transition: transform 0.5s ease;
+  
+  .swiper-slide {
+    width: 200px;
+    transition: transform 0.5s ease, opacity 0.5s ease;
     opacity: 0.5;
     transform: scale(0.8);
     cursor: pointer;
   }
-
-  .slide.active {
+  
+  .swiper-slide.is-center {
     transform: scale(1.2);
     opacity: 1;
   }
-
-  .slide img {
+  
+  @media (max-width: 768px) {
+    .swiper-slide {
+      width: 150px;
+    }
+  }
+  
+  .swiper-slide-active {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  
+  .swiper-slide img {
     width: 100%;
     border-radius: 10px;
+  }
+  
+  @media (max-width: 768px) {
+    .swiper-slide {
+      width: 150px;
+    }
   }
 
   .sidebar {
@@ -132,12 +178,16 @@ body {
       font-size: 1rem;
     }
   }
-/* 左下の日付 */
+  
+  /* 左下の日付 */
 .date {
-font-family: 'Zen Maru Gothic', sans-serif;
-  font-size: 30px ;
-  color: #8dc6ff ;
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-}
+    font-family: 'Zen Maru Gothic', sans-serif;
+      font-size: 25px ;
+      color: #8dc6ff ;
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+    }
+    
+  
+  
